// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoryFilter /> matchs snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  padding: 10px;
  font-size: 14px;
  color: #fff;
  border: 1px solid #fff;
  border-radius: 5px;
  margin-bottom: 20px;
}

.emotion-0 h4 {
  margin: 0;
  width: 100%;
  text-align: center;
}

.emotion-0 label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
  line-height: 0;
  cursor: pointer;
  border-radius: 3px;
  margin: 5px;
  text-transform: capitalize;
}

.emotion-0 label.active {
  opacity: 0.4;
}

.emotion-0 label:hover {
  color: #1c1c27;
  background: #fff;
}

.emotion-0 label input {
  display: none;
}

@media (min-width: 780px) {
  .emotion-0 h4 {
    width: auto;
    line-height: 1;
    margin-right: 10px;
  }
}

<form
    class="emotion-0 emotion-1"
  >
    <h4>
      Filter:
    </h4>
    <label>
      Show All
      <input
        name="all"
        type="checkbox"
      />
    </label>
    <label
      class="active"
    >
      Hide All
      <input
        checked=""
        name="none"
        type="checkbox"
      />
    </label>
    <label>
      first
      <input
        name="first"
        type="checkbox"
      />
    </label>
    <label>
      second
      <input
        name="second"
        type="checkbox"
      />
    </label>
    <label>
      third
      <input
        name="third"
        type="checkbox"
      />
    </label>
  </form>
</DocumentFragment>
`;

exports[`<CategoryFilter /> renders whiout props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  padding: 10px;
  font-size: 14px;
  color: #fff;
  border: 1px solid #fff;
  border-radius: 5px;
  margin-bottom: 20px;
}

.emotion-0 h4 {
  margin: 0;
  width: 100%;
  text-align: center;
}

.emotion-0 label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
  line-height: 0;
  cursor: pointer;
  border-radius: 3px;
  margin: 5px;
  text-transform: capitalize;
}

.emotion-0 label.active {
  opacity: 0.4;
}

.emotion-0 label:hover {
  color: #1c1c27;
  background: #fff;
}

.emotion-0 label input {
  display: none;
}

@media (min-width: 780px) {
  .emotion-0 h4 {
    width: auto;
    line-height: 1;
    margin-right: 10px;
  }
}

<form
    class="emotion-0 emotion-1"
  >
    <h4>
      Filter:
    </h4>
    <label
      class="active"
    >
      Show All
      <input
        checked=""
        name="all"
        type="checkbox"
      />
    </label>
    <label
      class="active"
    >
      Hide All
      <input
        checked=""
        name="none"
        type="checkbox"
      />
    </label>
  </form>
</DocumentFragment>
`;
